Fix dark mode links

--- a/bingus-frontend/src/App.css
+++ b/bingus-frontend/src/App.css
@@ -1,3 +1,11 @@
 p {
   margin: 0;
 }
+
+.mddark a {
+  color: lightblue;
+}
+
+.mddark a:visited {
+  color: lightpink;
+}
